# AITests

./: .gitignore
BasicProgram/: CMakeLists.txt  buildFiles.sh  compile.sh  double.cl
BasicProgram/src/: main.cpp
NumDetection/: CMakeLists.txt
NumDetection/src/: main.cpp
NumberRecognition/: CMakeLists.txt  README.md
NumberRecognition/assets/shaders/: mnistFrag.glsl  mnistVert.glsl
NumberRecognition/src/: GUI.cpp  GUI.h  MNISTLoader.cpp  MNISTLoader.h  main.cpp
